# alkyl

./: .gitignore  :w  CHANGELOG.md  CMakeLists.txt  LICENSE  ORIGINAL_REQUEST.md  PROJECT.md  README.md  README_reflection.md  actual_log.txt  actual_out.txt  alkyl  alkyl-cli  codegen_patch.sh  crash.aky  crash.al  crash2.aky  crash3.aky  crash_strcat.aky  docs.md  dump.txt  dump_syms.aky  extract.py  fix_class.py  fix_cond.py  fix_core.py  fix_lexer.py  fix_lexer_hash.py  fix_lexer_init.py  fix_modif.py  fix_parser_init.py  fix_printf.py  fix_recover.py  fix_stmt.py  fix_stmt.sh  fix_tests.py  fix_void_main.py  flow_writes.txt  gdb_script.txt  howto.json  (+122 more)
.agents/: AGENTS.md  BRIEFING.md  handoff.md
.agents/orchestrator/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  plan.md  progress.md
.agents/sub_orch_e2e/: BRIEFING.md  ORIGINAL_REQUEST.md  SCOPE.md  plan.md  progress.md
.agents/sub_orch_impl/: BRIEFING.md  ORIGINAL_REQUEST.md  SCOPE.md  plan.md  progress.md
.agents/teamwork_preview_explorer_lexer_1/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/teamwork_preview_explorer_lexer_2/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/teamwork_preview_explorer_lexer_3/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/worker_e2e_m1/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/worker_e2e_m2/: BRIEFING.md  ORIGINAL_REQUEST.md  progress.md
.agents/worker_lexer/: BRIEFING.md  ORIGINAL_REQUEST.md
business-architecture/: 01_business_analysis_planning_and_monitoring.md  02_elicitation_and_collaboration.md  06_solution_evaluation.md
code/: testing0.aky  testing1.aky
code/ai/: test0_manual0.aky  test1.aky
code/alir/: extern_casting.aky  member_access.aky  test0.aky
code/college/: alpro_1.aky  alpro_2.aky  alpro_3.aky  alpro_4.aky
code/manual/: simple_entities.aky  test0.aky  test2.aky  test_case.aky  test_define.aky  test_for.aky  test_namespace.aky  test_string.aky  test_type.aky
code/perf/: ifif.aky
code/sema/: block.aky  pure.aky
code/test/: argv.aky  assignment.aky  case.aky  define.aky  file.aky  for.aky  fun_pointer.aky  immutable.aky  loop.aky  malloc.aky  string1.aky  union.aky
codes/: main.aky  testing1.aky
docs/usage/: docs.md
include/alir/: alir.h  const.h  lvalue.h
include/codegen/: codegen.h
include/common/: aliases.h  arena.h  common.h  context.h  hashmap.h
include/driver/: cli.h  lsp.h  main.h
include/lexer/: lexer.h
include/meta/: eval.h  vm.h  vm_internal.h
include/parser/: emitter.h  modifier.h  parser.h  parser_internal.h  top.h  typestruct.h
include/semantic/: semantic.h  table.h  typestruct.h
lib/: c.aky  c.hky  cmath.aky  cstring.aky  std.hky
lib/c/: math.hky  stdio.hky  stdlib.hky
lib/llvm/: Analysis.aky  BitReader.aky  BitWriter.aky  Comdat.aky  Core.aky  DataTypes.aky  DebugInfo.aky  Deprecated.aky  Disassembler.aky  DisassemblerTypes.aky  Error.aky  ErrorHandling.aky  ExecutionEngine.aky  ExternC.aky  IRReader.aky  LLJIT.aky  LLJITUtils.aky  Linker.aky  Object.aky  Orc.aky  OrcEE.aky  Remarks.aky  Support.aky  Target.aky  TargetMachine.aky  Types.aky  Visibility.aky  blake3.aky  lto.aky
lib/llvm-c/: Comdat.hky  Visibility.h
lib/std/: alias.hky  file.hky  functool.hky  hashmap.aky  heap.aky  print.aky  set.aky  string.aky  vector.aky
misc/: howto.json  prompt_helper.txt  template.aky  test_init.aky
misc/howto/: as.json  bool.json  case.json  cast.json  char.json  class.json  clean.json  define.json  enum.json  extern.json  float.json  general.json  int.json  leak.json  lsp.txt  meta.json  mut.json  namespace.json  postmeta.json  pristine.json  pure.json  sizeof.json  string.json  switch.json  tainted.json  typedef.json  union.json  untaint.json  void.json  wash.json
scripts/: run_tests.sh
software-architecture/: 01_software_requirements.md  1_software_requirements.md
src-alkyl/driver/: main.aky
src/alick/: cfg.c  core.c  memory.c  type.c
src/alir/: alir.h  binary_read.c  binary_write.c  const.c  const.h  core.c  emitter.c  emitter.h  flux.c  generator.c  lvalue.c  lvalue.h  stmt.c  utils.c
src/codegen/: builtin.c  codegen.h  core.c  expr.c  flow.c  stmt.c  utils.c
src/codegen_llvm/: codegen.c  driver.c  translate.c
src/codegen_qbe/: codegen.c
src/common/: arena.c  common.c  common.h  context.c  debug.h  diagnostic.c  hashmap.c
src/compiler_debug/: compiler_debug.h
src/diagnostic/: diagnostic.c  diagnostic.h
src/driver/: cli.c  cli.h  lsp.c  main.c  main.h
src/lexer/: emitter.c  emitter.h  lexer.c  lexer.h
src/llvm_codegen/: codegen.c  translate.c
src/meta/: eval.c  eval_call.c  eval_flow.c  eval_math.c  eval_mem.c  eval_misc.c  vm.c
src/parser/: ast_clone.c  ast_clone.c.orig  core.c  emitter.c  emitter.c.orig  emitter.h  expr.c  expr.c.orig  expr_pratt.c  link.c  modif.c  modifier.c  parser.c  parser.h  parser_internal.h  stmt.c  top.c
src/semantic/: check.c  check.c.orig  core.c  emitter.c  emitter.h  scope.c  semantic.c  semantic.h  table.c  type.c  type.h  utils.c
std/: lib.aky
test/: cconv.aky
test/as/: extern_casting.aky  icast.aky
test/cast/: alpro_1.aky  class_cast.aky  namespace.aky  shadow.aky  test_copy.aky  test_cyclic2.aky  test_req3.aky  test_req4.aky  test_type.aky  test_var_cast.aky  test_vector.aky  test_vector_err.aky
test/compound/: test_compound.aky
test/functool/: adder.aky
test/general/: array.aky  builtins.aky  initvar.aky  varargs.aky  varargs2.aky
test/has/: test_has.aky
(+207 files in other folders)
